# portfolio-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0003_create_skills_table.sql  001_initial_schema.sql  002_seed_data.sql
backend/src/: config.rs  errors.rs  main.rs  responses.rs  state.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  certification.rs  education.rs  experience.rs  mod.rs  portfolio.rs  project.rs  skill.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: certification.rs  education.rs  experience.rs  mod.rs  personal_info.rs  project.rs  skill.rs  user.rs
backend/src/repositories/: certification.rs  education.rs  experience.rs  mod.rs  personal_info.rs  project.rs  skill.rs  user.rs
backend/src/services/: auth.rs  certification.rs  education.rs  experience.rs  mod.rs  personal_info.rs  project.rs  skill.rs
backend/src/utils/: api_response.rs  jwt.rs  mod.rs  password.rs  slug.rs
backend/src_old/config/: mod.rs
backend/src_old/db/: mod.rs
backend/src_old/handlers/: analytics.rs  auth.rs  blog.rs  contact.rs  mod.rs  portfolio.rs  projects.rs  resume.rs
backend/src_old/handlers/admin/: _stubs.rs  achievements.rs  analytics.rs  blog.rs  certifications.rs  contact.rs  education.rs  experience.rs  learning.rs  mod.rs  personal.rs  projects.rs  resume.rs  settings.rs  skills.rs  social_links.rs  (+1 more)
backend/src_old/middleware/: auth.rs
backend/src_old/models/: extra.rs  mod.rs
backend/src_old/utils/: jwt.rs  mod.rs
(+60 files in other folders)
